tdf#93830 txXfrm offset workaround works in rounded rectangle case as well

Change-Id: I5d8df5c0d55e8dfd7c978b16b2b220c127f3dac9
Reviewed-on: https://gerrit.libreoffice.org/18226
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Andras Timar <andras.timar@collabora.com>
(cherry picked from commit cc88a88caad591270760d947848ad0a032d32bdb)